# scryfall-local

./: .gitignore  CODE_SIMPLIFICATION_REVIEW.md  ISSUES.md  README.md  SUPPORTED_SYNTAX.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: reviewer.md
src/: __init__.py  card_store.py  cli.py  data_manager.py  import_utils.py  query_parser.py  scryfall.lark  server.py
tests/: __init__.py  conftest.py  test_card_store.py  test_cli.py  test_data_manager.py  test_import_utils.py  test_query_parser.py  test_server.py
