[project]
name = "scryfall-local"
version = "0.1.0"
description = "Local MCP server for Scryfall Magic: The Gathering card data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "findingsimple" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "ijson>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src"]
